# GeoPipeAgent

./: .env.example  .gitignore  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cookbook/: batch-convert.yaml  buffer-analysis.yaml  dissolve-analysis.yaml  filter-simplify.yaml  overlay-analysis.yaml  raster-qc.yaml  vector-qc.yaml
docs/superpowers/progress/: 2026-03-29-web-ui-implementation.md  2026-03-31-web-optimization.md
docs/superpowers/specs/: 2026-03-29-web-ui-design.md
src/geopipe_agent/: __init__.py  cli.py  errors.py
src/geopipe_agent/backends/: __init__.py  base.py  curl_api_backend.py  gdal_cli.py  gdal_python.py  gdal_python_backend.py  generic_cli_backend.py  geopandas_backend.py  native_python_backend.py  pyqgis_backend.py  qgis_process.py
src/geopipe_agent/engine/: __init__.py  context.py  executor.py  parser.py  reporter.py  resolver.py  validator.py
src/geopipe_agent/models/: __init__.py  pipeline.py  qc.py  result.py
src/geopipe_agent/skillgen/: generator.py
src/geopipe_agent/steps/: __init__.py  decorators.py  registry.py
tests/: conftest.py
tests/test_backends/: test_curl_api_backend.py  test_gdal_python.py  test_gdal_python_backend.py  test_generic_cli_backend.py  test_native_python.py  test_pyqgis_backend.py
tests/test_engine/: test_advanced_pipeline.py  test_context.py  test_executor.py  test_parser.py  test_validator.py
tests/test_steps/: test_analysis_steps.py  test_io_steps.py  test_network_steps.py  test_qc_steps.py  test_raster_steps.py  test_registry.py  test_vector_steps.py
web/backend/: Dockerfile  config.py  main.py  requirements.txt
web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+102 files in other folders)
