[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geopipe-agent"
version = "0.1.0"
description = "AI-Native GIS Analysis Pipeline Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "rasterio>=1.3",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
analysis = [
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
]
network = [
    "networkx>=3.0",
    "geopy>=2.3",
]
qgis = []

[project.scripts]
geopipe-agent = "geopipe_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
